<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_root"
        android:layout_width="match_parent"
        android:minWidth="280dp"
        android:background="@color/background"
        android:layout_height="wrap_content">

    <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/replace_rule_edit"
                android:textSize="20sp" />

        <com.moses.miiread.widget.views.ATETextInputLayout
                android:id="@+id/til_replace_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/replace_rule_summary">

            <com.moses.miiread.widget.views.ATEEditText
                    android:id="@+id/tie_replace_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
        </com.moses.miiread.widget.views.ATETextInputLayout>

        <com.moses.miiread.widget.views.ATETextInputLayout
                android:id="@+id/til_replace_rule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/replace_rule">

            <com.moses.miiread.widget.views.ATEEditText
                    android:id="@+id/tie_replace_rule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3" />
        </com.moses.miiread.widget.views.ATETextInputLayout>

        <com.moses.miiread.widget.views.ATECheckBox
                android:id="@+id/cb_use_regex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_regex" />

        <com.moses.miiread.widget.views.ATETextInputLayout
                android:id="@+id/til_replace_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/replace_to">

            <com.moses.miiread.widget.views.ATEEditText
                    android:id="@+id/tie_replace_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3" />
        </com.moses.miiread.widget.views.ATETextInputLayout>

        <com.moses.miiread.widget.views.ATETextInputLayout
                android:id="@+id/til_use_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/use_to">

            <com.moses.miiread.widget.views.ATEEditText
                    android:id="@+id/tie_use_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3" />
        </com.moses.miiread.widget.views.ATETextInputLayout>

        <TextView
                android:id="@+id/tv_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/selector_fillet_btn_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/ok"
                android:textColor="@color/tv_text_default" />

    </LinearLayout>
</ScrollView>