<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

	<LinearLayout android:layout_width="match_parent"
	              android:layout_height="wrap_content"
	              android:gravity="center_vertical|end"
	              android:orientation="horizontal"
	              android:id="@+id/timer_changeOrigin_ll"
	              android:baselineAligned="false">

		<LinearLayout
				android:id="@+id/ll_read_aloud_timer"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="60dp"
				android:orientation="horizontal"
				android:paddingStart="32dp"
				android:paddingEnd="12dp"
				android:visibility="gone">

			<com.google.android.material.floatingactionbutton.FloatingActionButton
					android:id="@+id/fab_read_aloud_timer"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="10dp"
					android:contentDescription="@string/set_timer"
					app:srcCompat="@drawable/ic_timer_black_24dp"
					android:tint="@color/tv_text_default"
					app:backgroundTint="@color/background_menu"
					app:elevation="2dp"
					app:fabSize="mini"
					app:pressedTranslationZ="2dp"/>

			<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					app:cardBackgroundColor="@color/background_card">

				<TextView
						android:id="@+id/tv_read_aloud_timer"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:clickable="true"
						android:focusable="true"
						android:padding="10dp"
						android:text="@string/read_aloud_timer"/>
			</androidx.cardview.widget.CardView>

		</LinearLayout>

		<LinearLayout android:layout_width="wrap_content"
		              android:layout_height="60dp"
		              android:orientation="horizontal"
		              android:paddingStart="12dp"
		              android:paddingEnd="42dp"
		              android:gravity="end|center_vertical"
		              android:id="@+id/change_origin_ll">

			<com.google.android.material.floatingactionbutton.FloatingActionButton
					android:id="@+id/change_origin"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription="@string/change_origin"
					app:srcCompat="@drawable/ic_change_origin"
					android:tint="@color/tv_text_default"
					app:backgroundTint="@color/background"
					app:elevation="2dp"
					app:fabSize="mini"
					app:pressedTranslationZ="2dp"/>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
			android:id="@+id/ll_floating_button"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:orientation="horizontal"
			android:paddingStart="32dp"
			android:paddingEnd="32dp">

		<com.google.android.material.floatingactionbutton.FloatingActionButton
				android:id="@+id/fabReadAloud"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:contentDescription="@string/read_aloud"
				app:srcCompat="@drawable/ic_read_aloud"
				android:tint="@color/tv_text_default"
				app:backgroundTint="@color/background"
				app:elevation="2dp"
				app:fabSize="mini"
				app:pressedTranslationZ="2dp"/>

		<Space
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"/>

		<com.google.android.material.floatingactionbutton.FloatingActionButton
				android:id="@+id/fabAutoPage"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:contentDescription="@string/auto_next_page"
				app:srcCompat="@drawable/ic_auto_page"
				android:tint="@color/tv_text_default"
				app:backgroundTint="@color/background"
				app:elevation="2dp"
				app:fabSize="mini"
				app:pressedTranslationZ="2dp"/>

		<Space
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"/>

		<com.google.android.material.floatingactionbutton.FloatingActionButton
				android:id="@+id/fabNightTheme"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:contentDescription="@string/night_theme"
				app:srcCompat="@drawable/ic_brightness"
				android:tint="@color/tv_text_default"
				app:backgroundTint="@color/background"
				app:elevation="2dp"
				app:fabSize="mini"
				app:pressedTranslationZ="2dp"/>

	</LinearLayout>

	<View style="@style/Style.Shadow.Bottom"/>

	<!--底部设置栏-->
	<LinearLayout
			android:id="@+id/llNavigationBar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/background"
			android:orientation="vertical">
		<!--章节设置-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginTop="5dp"
				android:layout_marginRight="20dp"
				android:layout_marginBottom="5dp"
				android:orientation="horizontal">

			<TextView
					android:id="@+id/tv_pre"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="10dp"
					android:layout_marginEnd="10dp"
					android:background="@drawable/bg_ib_pre_round"
					android:clickable="true"
					android:enabled="false"
					android:focusable="true"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					android:text="@string/previous_chapter"
					android:textColor="@color/tv_text_default"
					android:textSize="14sp"/>

			<com.moses.miiread.widget.views.ATESeekBar
					android:id="@+id/hpb_read_progress"
					android:layout_width="0dp"
					android:layout_height="25dp"
					android:layout_gravity="center_vertical"
					android:layout_weight="1"/>

			<TextView
					android:id="@+id/tv_next"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="10dp"
					android:layout_marginEnd="10dp"
					android:background="@drawable/bg_ib_pre_round"
					android:clickable="true"
					android:enabled="false"
					android:focusable="true"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					android:text="@string/next_chapter"
					android:textColor="@color/tv_text_default"
					android:textSize="14sp"/>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:baselineAligned="false"
				android:orientation="horizontal">

			<View
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"/>

			<!--目录按钮-->
			<LinearLayout
					android:id="@+id/ll_catalog"
					android:layout_width="50dp"
					android:layout_height="50dp"
					android:background="@drawable/bg_ib_pre_round"
					android:clickable="true"
					android:contentDescription="@string/chapter_list"
					android:focusable="true"
					android:orientation="vertical"
					android:paddingBottom="7dp">

				<androidx.appcompat.widget.AppCompatImageView
						android:layout_width="match_parent"
						android:layout_height="0dp"
						android:layout_weight="1"
						android:contentDescription="@string/chapter_list"
						app:srcCompat="@drawable/ic_chapter_list"
						app:tint="@color/tv_text_default"
						tools:ignore="NestedWeights"/>

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:layout_marginTop="3dp"
						android:text="@string/chapter_list"
						android:textColor="@color/tv_text_default"
						android:textSize="12sp"/>
			</LinearLayout>

			<View
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="2"/>
			<!--刷新按钮-->
			<LinearLayout
					android:id="@+id/ll_refresh"
					android:layout_width="50dp"
					android:layout_height="50dp"
					android:background="@drawable/bg_ib_pre_round"
					android:clickable="true"
					android:contentDescription="@string/refresh"
					android:focusable="true"
					android:orientation="vertical"
					android:paddingBottom="7dp">

				<androidx.appcompat.widget.AppCompatImageView
						android:layout_width="match_parent"
						android:layout_height="0dp"
						android:layout_weight="1"
						android:contentDescription="@string/refresh"
						app:srcCompat="@drawable/ic_refresh_black_24dp"
						app:tint="@color/tv_text_default"
						tools:ignore="NestedWeights"/>

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:layout_marginTop="3dp"
						android:text="@string/refresh"
						android:textColor="@color/tv_text_default"
						android:textSize="12sp"/>
			</LinearLayout>

			<View
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="2"/>
			<!--下载按钮-->
			<LinearLayout
					android:id="@+id/ll_download"
					android:layout_width="50dp"
					android:layout_height="50dp"
					android:background="@drawable/bg_ib_pre_round"
					android:clickable="true"
					android:contentDescription="@string/action_download"
					android:focusable="true"
					android:orientation="vertical"
					android:paddingBottom="7dp">

				<androidx.appcompat.widget.AppCompatImageView
						android:layout_width="match_parent"
						android:layout_height="0dp"
						android:layout_weight="1"
						android:contentDescription="@string/action_download"
						app:srcCompat="@drawable/ic_download_line"
						app:tint="@color/tv_text_default"
						tools:ignore="NestedWeights"/>

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:layout_marginTop="3dp"
						android:text="@string/action_download"
						android:textColor="@color/tv_text_default"
						android:textSize="12sp"/>
			</LinearLayout>

			<View
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="2"/>
			<!--设置按钮-->
			<LinearLayout
					android:id="@+id/ll_setting"
					android:layout_width="50dp"
					android:layout_height="50dp"
					android:background="@drawable/bg_ib_pre_round"
					android:clickable="true"
					android:contentDescription="@string/setting"
					android:focusable="true"
					android:orientation="vertical"
					android:paddingBottom="7dp">

				<androidx.appcompat.widget.AppCompatImageView
						android:layout_width="match_parent"
						android:layout_height="0dp"
						android:layout_weight="1"
						android:contentDescription="@string/setting"
						app:srcCompat="@drawable/ic_settings"
						app:tint="@color/tv_text_default"
						tools:ignore="NestedWeights"/>

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:layout_marginTop="3dp"
						android:text="@string/setting"
						android:textColor="@color/tv_text_default"
						android:textSize="12sp"/>
			</LinearLayout>

			<View
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"/>
		</LinearLayout>
	</LinearLayout>

</LinearLayout>